<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:src="@mipmap/tab_back"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/logintitle"
            android:textSize="18sp"/>

    </RelativeLayout>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@mipmap/login_box"
        android:hint="@string/email"
        android:drawableLeft="@mipmap/login_email_icon"
        android:layout_margin="10dp"
        android:paddingLeft="10dp"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@mipmap/login_box"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:hint="@string/password"
        android:drawableLeft="@mipmap/login_key_icon"
        android:drawableRight="@mipmap/login_forget"
        android:paddingRight="10dp"
        android:paddingLeft="10dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/login"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:background="@mipmap/login_btn"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center|bottom"
        android:paddingBottom="30dp">

        <TextView
            android:id="@+id/fixed01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="@string/loginnoaccout"/>

        <TextView
            android:id="@+id/signup"
            android:layout_toRightOf="@id/fixed01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:paddingLeft="3dp"
            android:paddingRight="3dp"
            android:textStyle="bold"
            android:text="@string/signup"/>

        <TextView
            android:id="@+id/fixed02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/signup"
            android:layout_alignParentBottom="true"
            android:text="@string/withemail"/>

    </RelativeLayout>

</LinearLayout>