<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:src="@mipmap/tab_back"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:text="@string/register"/>
    </RelativeLayout>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@mipmap/login_box"
        android:hint="@string/email"
        android:drawableLeft="@mipmap/login_email_icon"
        android:layout_margin="10dp"
        android:paddingLeft="10dp"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@mipmap/login_box"
        android:hint="@string/password"
        android:drawableLeft="@mipmap/login_key_icon"
        android:layout_margin="10dp"
        android:paddingLeft="10dp"/>


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@mipmap/login_box"
        android:hint="@string/repeatpassword"
        android:drawableLeft="@mipmap/login_key_icon"
        android:layout_margin="10dp"
        android:paddingLeft="10dp"/>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/register"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:background="@mipmap/login_btn"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center">

        <TextView
            android:id="@+id/fixtv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_above="@+id/fixtvlayout"
            android:text="@string/registertv01"/>

        <LinearLayout
            android:id="@+id/fixtvlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/iacceptthe"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/useragreement"/>

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>
